<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:padding="15dp"
        android:text="@string/emergency_message_header"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:textAlignment="center"/>
    <TextView
        android:padding="1px"
        android:text="@string/emergency_message_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>

    <EditText
        android:paddingTop="40dp"
        android:hint="@string/emergency_message_hint"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textImeMultiLine"
        android:imeOptions="actionDone"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:focusable="true"
        android:focusableInTouchMode="true"
        style="@style/Widget.AppCompat.EditText"
        android:id="@+id/message"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/save_button"
        android:id="@+id/save_button"/>

</LinearLayout>