<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:padding="15dp"
        android:text="@string/use_inst_header"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:textAlignment="center"/>
    <TextView
        android:padding="1px"
        android:text="@string/use_inst_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <ImageView
        android:id="@+id/add_contact_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_help"
        android:layout_gravity="center"
        android:padding="5dp" />
    <TextView
        android:id="@+id/Data"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_inst" />



</LinearLayout>